--- a/src/main/webapp/login/component.css
+++ b/src/main/webapp/login/component.css
@@ -6,16 +6,16 @@
 	overflow: hidden;
 	background-size: cover;
 	background-position: center center;
-	background: url('/img/login-background_dipper.jpg') no-repeat;
+	background: url('/dcxt/img/login-background_dipper.jpg') no-repeat;
 	z-index: 1;
 }
 
 .demo-1 .large-header {
-	background-image: url('../img/demo-1-bg.jpg');
+	background-image: url('/dcxt/img/demo-1-bg.jpg');
 }
 
 .demo-2 .large-header {
-	background-image: url('../img/demo-2-bg.jpg');
+	background-image: url('/dcxt/img/demo-2-bg.jpg');
 	background-position: center bottom;
 }
 
@@ -60,7 +60,7 @@
 	height: 20vw;
 	min-width: 3.5em;
 	min-height: 3.5em;
-	background: url(../img/deco.svg) no-repeat center center;
+	background: url(/dcxt/img/deco.svg) no-repeat center center;
 	background-size: cover;
 	position: absolute;
 	top: 50%;
